# UltimateDocResearcher

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Comprehensive Code Review_ UltimateDocResearcher.md  Dockerfile  E2E_GUIDE.md  LICENSE  Makefile  OPEN_SOURCE_BUGS.md  OPEN_SOURCE_READINESS.md  README.md  _console.py  config.yaml  eval_spec_err.txt  issues.md  llm_client_test_output.txt  new_run.py  pyproject.toml  pytest_output.txt  requirements.txt  task.md  test_out_utf8.txt  walkthrough.md
.claude/: launch.json  settings.local.json
api-triggers/: poll_results.py  trigger_kaggle.py
autoresearch/: __init__.py  cli.py  code_suggester.py  eval.py  incremental_collect.py  llm_client.py  prepare.py  research.py  train.py
chat/: app.py  chat_handler.py
collector/: __init__.py  analyzer.py  drive_extractor.py  run_mock.py  scraper.py  test_collector.py  ultimate_collector.py
dashboard/: app.py  seed_demo.py
demo/: demo.ipynb
docker/: README.md  docker-compose.yml
eval/: __init__.py  eval_spec.yaml  run_eval.py
memory/: __init__.py  cache.py  memory.py
quickstart/: README_quickstart.md  build_demo_corpus.py  demo-corpus.txt  demo-run.sh
research_deliverables/: __init__.py  classify_input.py  classify_topic.py  generators.py
templates/: program.md  program_templates.py
tests/: test_analyzer.py  test_analyzer_filters.py  test_classify_topic.py  test_cli.py  test_code_suggester.py  test_collector_logic.py  test_eval.py  test_eval_spec.py  test_external_focus.py  test_generators.py  test_llm_client.py  (+5 more)
(+21 files in other folders)
